Issue 3995 (long url wrap) (#4011)
* set the wrap to use overflow-wrap in EOC and footnotes

--- a/css/ccap-intro-business.css
+++ b/css/ccap-intro-business.css
@@ -3256,6 +3256,8 @@ img {
   font-size: 9.23076923px;
   color: #6D6F71;
   line-height: 1.5em;
+  overflow-wrap: break-word;
+  white-space: normal;
 }
 .footnote span {
   line-height: 1.5em;
@@ -3451,7 +3453,10 @@ div.cnx-eoc.references > .section > .body > .note > .body span {
 div.cnx-eoc.figure-credits .section {
   font-size: 9.23076923px;
 }
-div.cnx-eoc.suggested-resources > div.section > div.body p,
+div.cnx-eoc.suggested-resources > div.section > div.body p {
+  overflow-wrap: break-word;
+  white-space: normal;
+}
 div.cnx-eoc.suggested-resources > div.section > div.body table > tr > td {
   text-indent: -1em;
   padding-left: 9.23076923px;
